--- a/0x13-unittests_in_js/package.json
+++ b/0x13-unittests_in_js/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "description": "Unittests in JS",
   "main": "",
-  "dependencies": {},
+  "dependencies": {
+    "eslint": "^7.27.0"
+  },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/register": "^7.13.16",
     "chai": "^4.3.4",
     "mocha": "^8.4.0",
     "sinon": "^11.1.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --require @babel/register"
   },
   "author": "Colson Scott",
   "license": "ISC"
