Change test script back to just mocha no --require

--- a/0x13-unittests_in_js/package.json
+++ b/0x13-unittests_in_js/package.json
@@ -13,7 +13,7 @@
     "sinon": "^11.1.0"
   },
   "scripts": {
-    "test": "mocha --require @babel/register"
+    "test": "mocha"
   },
   "author": "Colson Scott",
   "license": "ISC"
